# tabview

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPING.md  README.md  README.rst
docs/: modal-style.md
examples/: output.sh
openspec/changes/add-color-themes/: design.md  proposal.md  tasks.md
openspec/changes/add-saved-views/: design.md  proposal.md  tasks.md
openspec/changes/add-saved-views/schemas/: view.schema.json
openspec/changes/archive/2026-06-18-rust-rewrite/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-19-filters/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-23-add-saved-views/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-05-add-color-themes/: proposal.md  tasks.md
openspec/changes/archive/2026-07-23-keyed-objects/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-23-large-file-store/: tasks.md
openspec/changes/archive/2026-07-23-non-interactive-output/: proposal.md  tasks.md
openspec/changes/filters/: tasks.md
openspec/changes/filters/specs/filters/: spec.md
openspec/changes/keyed-objects/: design.md  tasks.md
openspec/changes/large-file-store/: design.md  proposal.md  tasks.md
openspec/changes/non-interactive-output/: design.md  tasks.md
openspec/changes/rust-rewrite/: tasks.md
openspec/specs/cli-compatibility/: spec.md
openspec/specs/color-themes/: spec.md
openspec/specs/data-ingestion/: spec.md
openspec/specs/filters/: spec.md
openspec/specs/json-ingestion/: spec.md
openspec/specs/keyed-objects/: spec.md
openspec/specs/large-file-store/: spec.md
openspec/specs/non-interactive-output/: spec.md
openspec/specs/rust-architecture/: spec.md
openspec/specs/saved-views/: spec.md
openspec/specs/table-operations/: spec.md
openspec/specs/table-source-model/: spec.md
openspec/specs/tui-navigation/: spec.md
sample/: data_ohlcv.view.yml
sample/config/: config.toml  config.yml
sample/config/themes/: cmdzro-sample.toml  cmdzro.yml
sample/config/views/: conditional-colors.yml
sample/json/: array-of-arrays.json  array-of-objects.json  elasticsearch-response.json  keyed-aliases.json  keyed-index-settings.json  keyed-mappings.json  keyed-nodes.json  keyed-pipelines.json  keyed-repositories.json  malformed.json  mixed-types.json  nested-values.json  path-like-keys.json  records.ndjson  top-level-object.json
schemas/: theme.schema.json  view.schema.json
src/: cli.rs  lib.rs  main.rs  output.rs  theme.rs
src/command/: mod.rs
src/compat/: mod.rs
src/ingest/: adapter.rs  delimited.rs  json.rs  mod.rs  options.rs  source.rs  streaming_json.rs
src/ops/: clipboard.rs  filter.rs  mod.rs  search.rs  skip.rs  sort.rs
src/saved_views/: mod.rs
src/table/: executor.rs  mod.rs  model.rs  query.rs
src/ui/: mod.rs  terminal.rs
src/view/: column.rs  mod.rs
tests/: compat_harness.rs  interactive_output.rs  non_interactive.rs
tests/compat/: python_oracle.py
tests/compat/fixtures/: cases.json
(+34 files in other folders)
