[package]
name = "tabview"
version = "2.0.0"
edition = "2021"
license = "MIT"
description = "A command-line CSV and tabular data viewer"
repository = "https://github.com/Tabviewer/tabview"

[[bin]]
name = "tabview"
path = "src/main.rs"

[features]
default = []
clipboard = ["dep:arboard"]

[dependencies]
anyhow = "1.0"
arboard = { version = "3.6.1", optional = true }
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
crossterm = "0.29.0"
encoding_rs = "0.8.35"
libc = "0.2"
ratatui = "0.30.1"
thiserror = "2.0"
unicode-width = "0.2.2"

[dev-dependencies]
assert_cmd = "2.0"
insta = "1.43"
predicates = "3.1"
tempfile = "3.20"
