[package]
name = "tabview"
version = "2.0.0-alpha.1"
edition = "2021"
license = "MIT"
description = "A command-line CSV and tabular data viewer"
repository = "https://github.com/Tabviewer/tabview"

[[bin]]
name = "tabview"
path = "src/main.rs"

[features]
default = ["saved-views"]
clipboard = ["dep:arboard"]
saved-views = [
    "dep:num-format",
    "dep:semver",
]

[dependencies]
anyhow = "1.0"
arboard = { version = "3.6.1", optional = true }
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
crossterm = { version = "0.29.0", features = ["use-dev-tty"] }
encoding_rs = "0.8.35"
num-format = { version = "0.4", optional = true }
ratatui = "0.30.1"
regex = "1.12.2"
semver = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order", "raw_value"] }
thiserror = "2.0"
unicode-width = "0.2.2"
yaml_serde = "0.10.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
] }

[dev-dependencies]
assert_cmd = "2.0"
insta = "1.43"
libc = "0.2"
predicates = "3.1"
tempfile = "3.20"
